--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Hack or Snooze</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
-    <link
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet" />
+		<link
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
 			integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
@@ -17,7 +17,17 @@
 
 	<body>
 		<nav>
-			<b><a class="nav-link navbar-brand" href="#" id="nav-all">Hack or Snooze</a></b>
+			<b
+				><a class="nav-link navbar-brand" href="#" id="nav-all">Hack or Snooze</a>
+				<section class="main-nav-links hidden">
+					<span>|</span>
+					<a class="nav-link" href="#" id="nav-submit">submit</a>
+					<span>|</span>
+					<a class="nav-link" href="#" id="nav-favorites">favorites</a>
+					<span>|</span>
+					<a class="nav-link" href="#" id="nav-my-stories">my stories</a>
+				</section>
+			</b>
 			<a class="nav-link nav-right" href="#" id="nav-login">login/create user</a>
 			<span class="nav-link nav-right hidden" id="nav-welcome">
 				<a href="#" id="nav-user-profile"></a>
